<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_characters">

    <fragment
        android:id="@+id/navigation_characters"
        android:name="com.rickandmorty.ui.characters.CharactersFragment"
        android:label="@string/title_characters"
        tools:layout="@layout/fragment_characters">
        <action
            android:id="@+id/action_navigation_episodes_to_navigation_chatacter"
            app:destination="@id/navigation_character" />
    </fragment>


    <!-- TODO Ajouter le fragment Episode -->
    <fragment
        android:id="@+id/navigation_episodes"
        android:name="com.rickandmorty.ui.episodes.EpisodesFragment"
        android:label="@string/title_episodes"
        tools:layout="@layout/fragment_episodes">
        <action
            android:id="@+id/action_navigation_episodes_to_navigation_episode"
            app:destination="@id/navigation_episode" />
    </fragment>

    <fragment
        android:id="@+id/navigation_about"
        android:name="com.rickandmorty.ui.about.AboutFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/navigation_character"
        android:name="com.rickandmorty.ui.characters.detail.CharacterDetailFragment"
        android:label="@string/title_character"
        tools:layout="@layout/fragment_character_detail">
        <!-- TODO Ajouter en paramètre l'id, le nom et l'URL de l'image du personnage -->

        <argument
            android:name="character_id"
            app:argType="integer" />
        <argument
            android:name="character_name"
            app:argType="string" />
        <argument
            android:name="character_urlImg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_episode"
        android:name="com.rickandmorty.ui.episodes.detail.EpisodeDetailFragment"
        android:label="@string/title_episode"
        tools:layout="@layout/fragment_episode_detail">
        <argument
            android:name="episode_id"
            app:argType="integer" />
        <argument
            android:name="episode_name"
            app:argType="string" />
        <argument
            android:name="episode_num"
            app:argType="string" />
    </fragment>
</navigation>